--- a/app/src/main/res/layout/fragment_map_picker.xml
+++ b/app/src/main/res/layout/fragment_map_picker.xml
@@ -9,26 +9,28 @@
         android:id="@+id/cardSearchView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="60dp"
+        app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="24dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="@android:color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchViewLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:queryHint="Search for a location"
-            android:iconifiedByDefault="false"
             android:background="@android:color/transparent"
-            android:padding="0dp"
-            android:layout_margin="0dp"
+            android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:clickable="true" />
+            android:iconifiedByDefault="true"
+            android:padding="0dp"
+            android:queryHint="Search address..."
+            app:queryHint="Search address..." />
     </com.google.android.material.card.MaterialCardView>
 
     <fragment
@@ -38,8 +40,10 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/cardLocationDetails"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardLocationDetails"
