Add chat list UI, chat navigation, AES encryption, and message preview; implement chat model updates, product card in chat, and block/report dialog

--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -4,7 +4,12 @@
 
     <item
         android:id="@+id/action_block_user"
-        android:title="Block User"
+        android:title="Block"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_unblock_user"
+        android:title="Unblock"
         app:showAsAction="never" />
 
     <item
