--- a/app/src/main/res/menu/menu_listing.xml
+++ b/app/src/main/res/menu/menu_listing.xml
@@ -6,5 +6,5 @@
         android:id="@+id/action_report"
         android:title="Report"
         android:icon="@drawable/ic_report_24"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
